# mechanoids-tools

./: CMakeLists.txt
src/name_generator/: CMakeLists.txt
src/unpaker/: CMakeLists.txt  decode.h  pak.cpp  pak.h  unpaker.cpp
